# neptoon

./: .dock-gui.Dockerfile  .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  NOTYETtest_process_with_yaml.py  Neptoon-gui.bat  Neptoon-gui.py  README.md  ancillary_data_collection.rst  codemeta.json  contribution.md  example_calibration.py  example_calibration_gui.py  example_process.ipynb  example_process.py  gui.Dockerfile  mkdocs.yml  pyproject.toml  requirements-docs.txt  working_notebook.py
.gitlab/ci/: build.gitlab-ci.yml  docker.gitlab-ci.yml  docs.gitlab-ci.yml  lint.gitlab-ci.yml  package.gitlab-ci.yml  test.gitlab-ci.yml
.gitlab/facile-rs-ci/: .gitlab-ci.yml
.gitlab/issue_templates/: default_issue_template.md  feature_template.md
.gitlab/merge_request_templates/: default_merge_template.md  feature_merge_template.md
.streamlit/: config.toml
GUI/: Calibration.py  Configuration.py  Map.py  Single_click_run.py  Welcome.py
configuration_files/: A101_station.yaml  global_configuration.yaml  input_data_format.yaml  processing_method.yaml  station_data_X101.yaml  unique_name_processing_method.yaml  v1_processing_method.yaml
configuration_files_samples/: A101_station.yaml  v1_processing_method.yaml
cosmosbase/ancillary_data_collection/: nmdb_data_collection.py
cosmosbase/configuration/: config.py  configuration_input.py  yaml_classes.py
cosmosbase/data_management/: crns_data_hub.py  data_audit.py  data_format.py  data_ingest.py  data_validation.py  data_validation_tables.py  data_wrapper.py  logging.py
cosmosbase/dynamic_corrections/: conversions.py  neutron_corrections.py
cosmosbase/quality_assesment/: quality_assesment.py
docs/: conf.py  cosmosbase.rst  index.md  index.rst  nmdb_data_collection.rst
docs/contribution/: overview-contribution.md
docs/stylesheets/: extra.css
docs/user-guide/: choosing-corrections.md  data-quality-checks.md  external-data.md  importing-data.md  installation.md  key-site-information.md  sensor-calibration.md
documentation/flow_diagrams/: nmdb_collect_data_steps.md  nmdb_process_class.md  nmdb_process_flow.md
example_process/: example_calibration.py  example_process.ipynb  example_process_COSMOS-EUROPE.ipynb  example_process_raw_files.ipynb  example_raw_from_yaml.py  example_yaml_process.py  example_yaml_process_COSMOS-EUROPE.py  example_yaml_process_raw_files.py
example_process/configuration_files/: A101_station.yaml  FSC001_station.yaml  Sheepdrove02.yaml  v1_processing_method.yaml
example_process/example_data/: FSC001_time_series.csv  FSCD001_calibration.csv  SHC002.csv  roving.csv
examples/: A101_station.yaml  v1_processing_method.yaml
neptoon/: __init__.py
neptoon/ancillary_data_collection/: nmdb_data_collection.py
neptoon/calibration/: __init__.py  station_calibration.py
neptoon/cli/: cli.py  launcher.py
neptoon/columns/: column_information.py
neptoon/config/: __init__.py  configuration_input.py  site_information.py  yaml_validators.py
neptoon/configuration/: configuration_input.py  global_configuration.py  yaml_classes.py
neptoon/core/: __init__.py  (+1 more)
pages/: Find_N0.py  Single_click_run.py
(+125 files in other folders)
