[tool.poetry]
name = "cosmosbase"
version = "0.1.0"
description = "The cosmosbase package serves as the building blocks for other CRNS flavoured python packages. This ensure consistency between tools and prevents redundant packages being installed when not necessary."
authors = [
    "Daniel Power <daniel.power@ufz.de>",
    "Martin Schroen <martin.schroen@ufz.de>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
urllib3 = "^2.2.0"
python-dateutil = "^2.8.2"
pytest = "^8.0.0"
requests = "^2.31.0"
platformdirs = "^4.2.0"
PyYAML = "^6.0.1"
pyarrow = "^15.0.0"
pyaml = "^23.12.0"
pydantic = "^2.6.1"
flake8 = "^7.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
